<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drible</string>
    <string name="title_section1">Popular</string>
    <string name="title_section2">Everyone</string>
    <string name="title_section3">Debuts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_comments">Comments</string>
    <string name="action_share">Share</string>
    <string name="title_activity_works">Works</string>
    <string name="title_activity_about">About</string>
    <string name="about_dribbble">A place to show and tell, promote, discover, and explore design.</string>
    <string name="default_name">Dribbble Player</string>
    <string name="zero">0</string>
    <string name="shot_title">Shot Title</string>
    <string name="default_date">1970-01-01</string>
    <string name="avatar_desc">avatar</string>
    <string name="shot_desc">shot</string>
    <string name="dribbble_location_title">Dribbble LLC</string>
    <string name="dribbble_location_part1">16 Front Street, Suite 202</string>
    <string name="dribbble_location_part2">Salem, MA 01970 USA</string>
    <string name="default_member_name">Member Name</string>
    <string name="default_job_position">Job Position</string>
    <string name="default_comment_author">Comment Author</string>
    <string name="default_location">Player Location</string>
    <string name="default_website">http://dribbble.com</string>
    <string name="profile_shots">Shots</string>
    <string name="profile_likes">Likes</string>
    <string name="profile_comments">Comments</string>
    <string name="profile_rebounds">Rebounds</string>
    <string name="profile_follows">Follows</string>
    <string name="profile_draftees">Draftees</string>
    <string name="share_title">Share this awesome work to…</string>
    <string name="no_more_comment">No more comment.</string>
    <string name="no_more_shot">No more shot.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_end">THE END</string>
    <string name="network_failed">Network Failed :-(</string>
    <string name="network_failed_hint">Refresh again or check your network settings.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="prefs_player">User Name</string>
    <string name="prefs_player_summary">User Name</string>
    <string name="typeface">Font</string>
    <string name="prefs_typeface">AleoRegular</string>
    <string name="page_size">Page Size</string>
    <string name="prefs_page_size">8</string>

</resources>
