<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:background="@color/dribbble_graphite"
    android:padding="8dp"
    tools:context=".ui.PlayerFragment">

    <com.mikhaellopez.circularimageview.CircularImageView
        xmlns:civ="http://schemas.android.com/apk/res-auto"
        android:id="@+id/collection_player_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/default_avatar"
        civ:border="true"
        civ:border_color="@color/dribbble_blog"
        civ:border_width="2dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_toRightOf="@id/collection_player_avatar"
        android:layout_marginLeft="8dp">

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/collection_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="@color/dribbble_pink"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:text="@string/default_name" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/collection_player_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dribbble_blog"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:layout_alignParentBottom="true"
            android:textSize="14sp"
            android:text="@string/default_location" />

    </RelativeLayout>

    <com.keith.idribbble.view.AnyTextView
        style="@style/DribbbleFont"
        android:id="@+id/collection_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:textColor="@color/dribbble_pink"
        android:text="@string/default_website"
        android:layout_below="@id/collection_player_avatar"
        android:layout_marginTop="8dp"
        android:textStyle="italic|bold" />

    <LinearLayout
        android:id="@+id/collection_player_profile_attributes"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_below="@id/collection_website"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/profile_shots" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/profile_likes" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/profile_comments" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/profile_rebounds" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/profile_follows" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/profile_draftees" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_below="@id/collection_website"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@id/collection_player_profile_attributes"
        android:layout_marginLeft="64dp">

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/profile_shots"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:text="@string/zero" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/profile_likes"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:text="@string/zero" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/profile_comments"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:text="@string/zero" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/profile_rebounds"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:text="@string/zero" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/profile_follows"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:text="@string/zero" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/profile_draftees"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:textColor="@color/dribbble_blog"
            android:textSize="16sp"
            android:text="@string/zero" />

    </LinearLayout>

</RelativeLayout>
