<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/shot_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:background="@color/dribbble_pink"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/shot_desc" />

        <ImageView
            android:id="@+id/shot_avatar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/default_avatar"
            android:layout_below="@id/shot_image"
            android:contentDescription="@string/avatar_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@id/shot_image"
            android:layout_toRightOf="@id/shot_avatar"
            android:layout_marginLeft="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0">

                <com.keith.idribbble.view.AnyTextView
                    style="@style/DribbbleFont"
                    android:id="@+id/shot_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/default_name"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/dribbble_pink" />

                <com.keith.idribbble.view.AnyTextView
                    style="@style/DribbbleFont"
                    android:id="@+id/shot_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_like"
                    android:text="@string/zero"
                    android:textSize="12sp"
                    android:textColor="@color/dribbble_gray"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="2dp" />

                <com.keith.idribbble.view.AnyTextView
                    style="@style/DribbbleFont"
                    android:id="@+id/shot_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_comment"
                    android:text="@string/zero"
                    android:textSize="12sp"
                    android:textColor="@color/dribbble_gray"
                    android:layout_toLeftOf="@id/shot_like"
                    android:layout_marginRight="6dp"
                    android:drawablePadding="2dp" />

                <com.keith.idribbble.view.AnyTextView
                    style="@style/DribbbleFont"
                    android:id="@+id/shot_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_view"
                    android:text="@string/zero"
                    android:textSize="12sp"
                    android:textColor="@color/dribbble_gray"
                    android:layout_toLeftOf="@id/shot_comment"
                    android:layout_marginRight="6dp"
                    android:drawablePadding="2dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0">

                <com.keith.idribbble.view.AnyTextView
                    style="@style/DribbbleFont"
                    android:id="@+id/shot_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/shot_title"
                    android:textColor="@color/dribbble_graphite"
                    android:layout_alignParentBottom="true" />

                <com.keith.idribbble.view.AnyTextView
                    style="@style/DribbbleFont"
                    android:id="@+id/shot_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_date"
                    android:textSize="12sp"
                    android:textColor="@color/dribbble_gray"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
