<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dribbble_background"
    android:padding="12dp">

    <com.mikhaellopez.circularimageview.CircularImageView xmlns:civ="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_item_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/default_avatar"
        civ:border_color="#eeeeee"
        civ:border_width="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/about_item_avatar"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/about_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_member_name"
            android:textColor="@color/dribbble_graphite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/about_item_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_job_position"
            android:textColor="@color/dribbble_pink"
            android:textSize="14sp" />

        <com.keith.idribbble.view.AnyTextView
            style="@style/DribbbleFont"
            android:id="@+id/about_item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/about_dribbble"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/dribbble_gray"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>
